[package]
name = "alphred"
version = "0.1.0"
authors = ["Alpha Chen <alpha.chen@gmail.com>"]
description = "Make Alfred workflows easier"
documentation = "https://docs.rs/alphred"
homepage = "https://github.com/kejadlen/alphred-rs"
repository = "https://github.com/kejadlen/alphred-rs"
license = "MIT"
edition = "2018"

[dependencies]
anyhow = "1.0"
serde = "1.0"
serde_derive = "1.0"
